--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>abcd</h1>
+	<h1>efgh</h1>
 	<h2>202012-02-2xxxx</h2>
 	<p>如果一件事情的爭論，對方讓我感覺到他的態度是＂只要立場對調，標準就會180度轉變＂，比方同一件事A黨做就是混帳王八蛋，B黨做就完全ok，或性別A這麼說就是混帳王八蛋，性別B就完全ok等等，那這件事就一點爭論的價值都沒有，隨便翻個推友的照片打打手槍還有意義的多。</p>
 </body>
